--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
 	<div class="header">
 		<div>
 			<div class="logo"></div>
+			<div class="menu">
+				<a href="#">示範案例</a>
+				<a href="#">產品導覽</a>
+				<a href="#">聯絡我們</a>
+			</div>
 		</div>
 	</div>
 	<div class="content">
 		<div class="up">
 			<img src="images/image1.png">
+			<!--<img src="temp/temp_image1.png">-->
 			<div>
-				xxx
+				<div class="label">
+					<span>MCSApp</span>
+					<span class="spline">|</span>
+					<span>Mobile</span>
+				</div>
+				<div class="text">
+					行動門房服務App(Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
+				</div>
+				<div class="button">
+					<a href="#"><img src="images/icon1.png"></a>
+					<a href="#"><img src="images/icon2.png"></a>
+				</div>
 			</div>
 		</div>
 		<div class="tip">
