--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span>Mobile</span>
 				</div>
 				<div class="text">
-					行動門房服務App(Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
+					行動門房服務App (Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
 				</div>
 				<div class="button">
 					<a href="#"><img src="images/icon1.png"></a>
@@ -41,13 +41,68 @@
 			<img src="images/tips_3.png" class="tips3">
 		</div>
 		<div class="down">
+			<!--<img src="temp/temp_funtion.png">-->
 			<img src="images/function.png">
 			<div>
-				xxx
+				<div class="label">拉近酒店價值與用戶的距離</div>
+				<div class="text">專屬的IM即時通訊平台，提供房客和飯店間享有互動式的即時住房服務體驗；飯店主動式的行動管家服務概念，發揮實體店面O2O的優勢，提昇顧客的消費體驗並增加商品的成交機率。酒店擁有自主的品牌App，透過量化的數據檢視成效，滿足客戶越來越個性化的需求。</div>
 			</div>
 		</div>
 		<div class="features">
+			<div class="label">Key Features</div>
+			<div class="text">
+				<div class="icon">
+					<img src="images/features_icon1.png">
+					<span>支援iOS跟Android系統</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon5.png">
+					<span>友善的使用者介面</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon9.png">
+					<span>預約訂購服務</span>
+				</div>
 
+				<div class="icon">
+					<img src="images/features_icon2.png">
+					<span>支援多國語言 (繁簡英日)</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon6.png">
+					<span>QR Code客戶驗證要求</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon10.png">
+					<span>推播導購功能</span>
+				</div>
+
+				<div class="icon">
+					<img src="images/features_icon3.png">
+					<span>即時記錄每一筆服務交易</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon7.png">
+					<span>酒店叫車服務</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon11.png">
+					<span>退房後住房服務資料重置</span>
+				</div>
+
+				<div class="icon">
+					<img src="images/features_icon4.png">
+					<span>互動式的即時住房服務</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon8.png">
+					<span>迷路導航功能</span>
+				</div>
+				<div class="icon">
+					<img src="images/features_icon12.png">
+					<span>即時調整內容和圖片</span>
+				</div>
+			</div>
 		</div>
 		<div class="prime">
 			<img src="images/image2.png" class="prime1">
@@ -55,7 +110,19 @@
 			<img src="images/image4.png" class="prime3">
 		</div>
 		<div class="primetext">
-
+			<div>
+				<div class="label">立即啟動您的行動策略</div>
+				<div class="text">使用MCSApp後台來服務每一位重要的顧客，您可以即時的調整產品的內容、圖片、價格、特色等，還有更多。</div>
+			</div>
+			<div>
+				<div class="label">服務記錄分析</div>
+				<div class="text">
+每一筆服務需求都會被記錄並儲存到後端資料庫，可作為日後內部績效管理和顧客追蹤分析之依據。</div>
+			</div>
+			<div>
+				<div class="label">了解您的客戶</div>
+				<div class="text">透過平台的服務記錄來了解您的客戶，並精準的發送品牌行銷資訊，來了解您的客戶對於飯店所提供的哪些產品和服務更感興趣！</div>
+			</div>
 		</div>
 	</div>
 	<div class="footer">
