--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<div class="content">
 		<div class="up">
 			<img src="images/image1.png">
-			<!--<img src="temp/temp_image1.png">-->
 			<div>
 				<div class="label">
 					<span>MCSApp</span>
@@ -43,7 +42,6 @@
 			<img src="images/tips_3.png" class="tips3">
 		</div>
 		<div class="down">
-			<!--<img src="temp/temp_funtion.png">-->
 			<img src="images/function.png">
 			<div>
 				<div class="label">拉近酒店價值與用戶的距離</div>
@@ -130,7 +128,24 @@
 	<div class="footer">
 		<img src="images/copyright.png">
 		<div>
-			xxx
+			<div class="logo"></div>
+			<div class="logotext">和特資訊服務股份有限公司</div>
+			<div class="address">114 台北市南港區三重路19-13號5樓516室<br>
+			Rm. 516, 5F., No.19-13, Sanchong Rd., Nan-<br>
+			gang Dist., Taipei City 115, Taiwan (R.O.C.)
+			</div>
+			<div class="copyright">
+				<div class="left">Copyright © 2015 HotelityIn Inc. 保留一切權利。</div>
+				<div class="right">
+					<a href="#">隱私權政策</a>
+					<span>|</span>
+					<a href="#">示範案例</a>
+					<span>|</span>
+					<a href="#">產品導覽</a>
+					<span>|</span>
+					<a href="#">聯絡我們</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
