--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					行動門房服務App (Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
 				</div>
 				<div class="button">
-					<a href="#"><img src="images/icon1.png"></a>
-					<a href="#"><img src="images/icon2.png"></a>
+					<a href="#">產品導覽<!-- <img src="images/icon1.png"> --></a>
+					<a href="#">示範案例<!-- <img src="images/icon2.png"> --></a>
 				</div>
 			</div>
 		</div>
