--- a/index.html
+++ b/index.html
@@ -1,152 +1,152 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/index.js"></script>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </head>
+
 <body>
-	<div class="header">
-		<div>
-			<div class="logo"></div>
-			<div class="menu">
-				<a href="#">示範案例</a>
-				<a href="#">產品導覽</a>
-				<a href="#">聯絡我們</a>
-			</div>
-		</div>
-	</div>
-	<div class="content">
-		<div class="up">
-			<img src="images/image1.png">
-			<div>
-				<div class="label">
-					<span>MCSApp</span>
-					<span class="spline">|</span>
-					<span>Mobile</span>
-				</div>
-				<div class="text">
-					行動門房服務App (Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
-				</div>
-				<div class="button">
-					<a href="#">產品導覽<!-- <img src="images/icon1.png"> --></a>
-					<a href="#">示範案例<!-- <img src="images/icon2.png"> --></a>
-				</div>
-			</div>
-		</div>
-		<div class="tip">
-			<img src="images/tips_1.png" class="tips1">
-			<img src="images/tips_2.png" class="tips2">
-			<img src="images/tips_3.png" class="tips3">
-		</div>
-		<div class="down">
-			<img src="images/function.png">
-			<div>
-				<div class="label">拉近酒店價值與用戶的距離</div>
-				<div class="text">專屬的IM即時通訊平台，提供房客和飯店間享有互動式的即時住房服務體驗；飯店主動式的行動管家服務概念，發揮實體店面O2O的優勢，提昇顧客的消費體驗並增加商品的成交機率。酒店擁有自主的品牌App，透過量化的數據檢視成效，滿足客戶越來越個性化的需求。</div>
-			</div>
-		</div>
-		<div class="features">
-			<div class="label">Key Features</div>
-			<div class="text">
-				<div class="icon">
-					<img src="images/features_icon1.png">
-					<span>支援iOS跟Android系統</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon5.png">
-					<span>友善的使用者介面</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon9.png">
-					<span>預約訂購服務</span>
-				</div>
-
-				<div class="icon">
-					<img src="images/features_icon2.png">
-					<span>支援多國語言 (繁簡英日)</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon6.png">
-					<span>QR Code客戶驗證要求</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon10.png">
-					<span>推播導購功能</span>
-				</div>
-
-				<div class="icon">
-					<img src="images/features_icon3.png">
-					<span>即時記錄每一筆服務交易</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon7.png">
-					<span>酒店叫車服務</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon11.png">
-					<span>退房後住房服務資料重置</span>
-				</div>
-
-				<div class="icon">
-					<img src="images/features_icon4.png">
-					<span>互動式的即時住房服務</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon8.png">
-					<span>迷路導航功能</span>
-				</div>
-				<div class="icon">
-					<img src="images/features_icon12.png">
-					<span>即時調整內容和圖片</span>
-				</div>
-			</div>
-		</div>
-		<div class="prime">
-			<img src="images/image2.png" class="prime1">
-			<img src="images/image3.png" class="prime2">
-			<img src="images/image4.png" class="prime3">
-		</div>
-		<div class="primetext">
-			<div>
-				<div class="label">立即啟動您的行動策略</div>
-				<div class="text">使用MCSApp後台來服務每一位重要的顧客，您可以即時的調整產品的內容、圖片、價格、特色等，還有更多。</div>
-			</div>
-			<div>
-				<div class="label">服務記錄分析</div>
-				<div class="text">
-每一筆服務需求都會被記錄並儲存到後端資料庫，可作為日後內部績效管理和顧客追蹤分析之依據。</div>
-			</div>
-			<div>
-				<div class="label">了解您的客戶</div>
-				<div class="text">透過平台的服務記錄來了解您的客戶，並精準的發送品牌行銷資訊，來了解您的客戶對於飯店所提供的哪些產品和服務更感興趣！</div>
-			</div>
-		</div>
-	</div>
-	<div class="footer">
-		<img src="images/copyright.png">
-		<div>
-			<div class="logo"></div>
-			<div class="logotext">和特資訊服務股份有限公司</div>
-			<div class="address">114 台北市南港區三重路19-13號5樓516室<br>
-			Rm. 516, 5F., No.19-13, Sanchong Rd., Nan-<br>
-			gang Dist., Taipei City 115, Taiwan (R.O.C.)
-			</div>
-			<div class="copyright">
-				<div class="left">Copyright © 2015 HotelityIn Inc. 保留一切權利。</div>
-				<div class="right">
-					<a href="#">隱私權政策</a>
-					<span>|</span>
-					<a href="#">示範案例</a>
-					<span>|</span>
-					<a href="#">產品導覽</a>
-					<span>|</span>
-					<a href="#">聯絡我們</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="header">
+        <div>
+            <div class="logo"></div>
+            <div class="menu">
+                <a href="#">示範案例</a>
+                <a href="#">產品導覽</a>
+                <a href="#">聯絡我們</a>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="up">
+            <img src="images/image1.png">
+            <div>
+                <div class="label">
+                    <span>MCSApp</span>
+                    <span class="spline">|</span>
+                    <span>Mobile</span>
+                </div>
+                <div class="text">
+                    行動門房服務App (Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
+                </div>
+                <div class="button">
+                    <a href="#">產品導覽</a>
+                    <a href="#">示範案例</a>
+                </div>
+            </div>
+        </div>
+        <div class="tip">
+            <img src="images/tips_1.png" class="tips1">
+            <img src="images/tips_2.png" class="tips2">
+            <img src="images/tips_3.png" class="tips3">
+        </div>
+        <div class="down">
+            <img src="images/function.png">
+            <div>
+                <div class="label">拉近酒店價值與用戶的距離</div>
+                <div class="text">專屬的IM即時通訊平台，提供房客和飯店間享有互動式的即時住房服務體驗；飯店主動式的行動管家服務概念，發揮實體店面O2O的優勢，提昇顧客的消費體驗並增加商品的成交機率。酒店擁有自主的品牌App，透過量化的數據檢視成效，滿足客戶越來越個性化的需求。</div>
+            </div>
+        </div>
+        <div class="features">
+            <div class="label">Key Features</div>
+            <div class="text">
+                <div class="icon">
+                    <img src="images/features_icon1.png">
+                    <span>支援iOS跟Android系統</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon5.png">
+                    <span>友善的使用者介面</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon9.png">
+                    <span>預約訂購服務</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon2.png">
+                    <span>支援多國語言 (繁簡英日)</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon6.png">
+                    <span>QR Code客戶驗證要求</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon10.png">
+                    <span>推播導購功能</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon3.png">
+                    <span>即時記錄每一筆服務交易</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon7.png">
+                    <span>酒店叫車服務</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon11.png">
+                    <span>退房後住房服務資料重置</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon4.png">
+                    <span>互動式的即時住房服務</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon8.png">
+                    <span>迷路導航功能</span>
+                </div>
+                <div class="icon">
+                    <img src="images/features_icon12.png">
+                    <span>即時調整內容和圖片</span>
+                </div>
+            </div>
+        </div>
+        <div class="prime">
+            <img src="images/image2.png" class="prime1">
+            <img src="images/image3.png" class="prime2">
+            <img src="images/image4.png" class="prime3">
+        </div>
+        <div class="primetext">
+            <div>
+                <div class="label">立即啟動您的行動策略</div>
+                <div class="text">使用MCSApp後台來服務每一位重要的顧客，您可以即時的調整產品的內容、圖片、價格、特色等，還有更多。</div>
+            </div>
+            <div>
+                <div class="label">服務記錄分析</div>
+                <div class="text">
+                    每一筆服務需求都會被記錄並儲存到後端資料庫，可作為日後內部績效管理和顧客追蹤分析之依據。</div>
+            </div>
+            <div>
+                <div class="label">了解您的客戶</div>
+                <div class="text">透過平台的服務記錄來了解您的客戶，並精準的發送品牌行銷資訊，來了解您的客戶對於飯店所提供的哪些產品和服務更感興趣！</div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <img src="images/copyright.png">
+        <div>
+            <div class="logo"></div>
+            <div class="logotext">和特資訊服務股份有限公司</div>
+            <div class="address">114 台北市南港區三重路19-13號5樓516室
+                <br> Rm. 516, 5F., No.19-13, Sanchong Rd., Nan-
+                <br> gang Dist., Taipei City 115, Taiwan (R.O.C.)
+            </div>
+            <div class="copyright">
+                <div class="left">Copyright © 2015 HotelityIn Inc. 保留一切權利。</div>
+                <div class="right">
+                    <a href="#">隱私權政策</a>
+                    <span>|</span>
+                    <a href="#">示範案例</a>
+                    <span>|</span>
+                    <a href="#">產品導覽</a>
+                    <span>|</span>
+                    <a href="#">聯絡我們</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
