--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>hotelityin</title>
+    <title>HotelityIn</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/index.js"></script>
