--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div>
             <div class="logo"></div>
             <div class="menu">
-                <a href="#">示範案例</a>
+                <a href="./">示範案例</a>
                 <a href="#">產品導覽</a>
-                <a href="#">聯絡我們</a>
+                <a href="contact.html">聯絡我們</a>
             </div>
         </div>
     </div>
