--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="header">
         <div>
-            <div class="logo"></div>
+            <div class="logo"><a href="./"></a></div>
             <div class="menu">
                 <a href="./">示範案例</a>
-                <a href="#">產品導覽</a>
+                <a href="product.html">產品導覽</a>
                 <a href="contact.html">聯絡我們</a>
             </div>
         </div>
