--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     行動門房服務App (Mobile Concierge Service App, MCSApp)，結合IM、Beacon和全新概念的I am interested in三大主軸，發展出能提供飯店與旅客之間溝通的行動品牌營銷平台。
                 </div>
                 <div class="button">
-                    <a href="#">產品導覽</a>
-                    <a href="#">示範案例</a>
+                    <a href="product.html">產品導覽</a>
+                    <a href="./">示範案例</a>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
         <div>
             <div class="logo"></div>
             <div class="logotext">和特資訊服務股份有限公司</div>
-            <div class="address">114 台北市南港區三重路19-13號5樓516室
+            <div class="address">115 台北市南港區三重路19-13號5樓516室
                 <br> Rm. 516, 5F., No.19-13, Sanchong Rd., Nan-
                 <br> gang Dist., Taipei City 115, Taiwan (R.O.C.)
             </div>
@@ -138,11 +138,11 @@
                 <div class="right">
                     <a href="#">隱私權政策</a>
                     <span>|</span>
-                    <a href="#">示範案例</a>
+                    <a href="./">示範案例</a>
                     <span>|</span>
-                    <a href="#">產品導覽</a>
+                    <a href="product.html">產品導覽</a>
                     <span>|</span>
-                    <a href="#">聯絡我們</a>
+                    <a href="contact.html">聯絡我們</a>
                 </div>
             </div>
         </div>
